# Py_Monitor

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  FIXES_APPLIED.md  Makefile  PROGRESS.md  README.md  REFACTORING_PLAN.md  SERVER_DEBUG_GUIDE.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 010a64f19c58_add_content_change_and_keyword_.py  17fdb90c33bf_initial_migration.py  3fb3f38478c5_add_notifications_table.py  4bab6c85127f_add_custom_headers_to_projects.py  6736c613bdfd_add_maintenance_mode_to_project.py  8c9b2aa94269_add_is_superuser_to_user.py  930d4be4c186_add_category_and_tags_to_project.py  ac27af5c1e9b_add_user_settings_theme_language_.py  af916e15dfe0_add_deleted_at_to_users_table.py  b919de277196_fix_monitoring_relationships.py  b9b993f15413_add_is_active_to_project.py  bfd5f2f17c60_add_new_fields_to_models.py  c850336053a0_create_initial_tables.py  create_monitoring_tables.py  d4f8e2a1b3c5_add_is_public_to_project.py  e2e03e4cbc9d_add_extended_playwright_metrics.py  e7a3b5c9d2f1_add_role_to_user.py  f52032ddf8df_fix_monitoring_foreign_key_schema.py  f84a6003a898_create_missing_tables.py  fb52c0c8a942_add_playwright_metrics_to_monitoring_.py  initial_migration.py  monitoring_tables.py
app/: main.py
app/api/: deps.py
app/core/: cache.py  config.py  deps.py  logging_config.py  rate_limit.py  security.py  settings.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  base.py  email.py  email_log.py  internal_log.py  monitoring.py  notification.py  project.py  project_log.py  request_log.py  ssl_domain.py  team.py  user.py
app/repositories/: __init__.py  base.py  monitoring_repository.py  notification_repository.py  project_repository.py  user_repository.py
app/schemas/: __init__.py  base.py  monitoring.py  notification.py  project.py  (+3 more)
docs/: CHANGELOG.md  CONTRIBUTING.md  FEATURE_SPEC.md  PULL_REQUEST_TEMPLATE.md  README.md  README_KR.md  api.md  architecture.md  deployment-guide.md  deployment.md  development.md  docker-guide.md  missing_monitoring_check_request.md  openapi.yaml  performance.md  php_developer_guide.md  postgres_setup.md  redis-guide.md  security.md  workflow.md
frontend/: index.html  login.html  monitoring.js  project.html  register.html  style.css
scripts/: create_branch.sh
tests/: conftest.py  test_db.py  test_frontend.js  test_monitoring.py  test_notifications.py  test_projects.py
(+103 files in other folders)
